[package]
authors = ["Hamza"]
edition = "2018"
name = "yew-material"
version = "0.1.0"

[dependencies]
wasm-bindgen = "^0.2"
yew = { git = "https://github.com/yewstack/yew/", branch = "master" }
js-sys = "0.3"
paste = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "ValidityState",
    "CustomEvent",
    "Node",
    "Element",
    "HtmlElement"
]
