[package]
name = "material-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.0.2"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
yew = { git = "https://github.com/hamza1311/yew", branch = "js-value-properties", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlFormElement"
]

[workspace]
members = [
    "build"
]
