[package]
name = "screenshots"
version = "0.1.0"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2"
yew = { git = "https://github.com/yewstack/yew/", branch = "master" }
yew-router = { git = "https://github.com/yewstack/yew/", branch = "master" }
yew-material = { path = "..", features = ["full"] }
