[package]
name = "website"
version = "0.1.0"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
yew = { version="0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo-utils = "0.1"
gloo-console = "0.2"

material-yew = { path = "../material-yew", features = ["full"] }
web-sys = { version = "0.3", features = ["HtmlMetaElement", "Document", "Element", "DocumentFragment", "HtmlTemplateElement", "MediaQueryList"] }
unindent = "0.1"

[dependencies.syntect]
version = "4.5"
default-features = false
features = [
    "html",
    "dump-load",
    "regex-fancy"
]

[build-dependencies]
pulldown-cmark = "0.8"
syntect = { version = "4.5", default-features = false, features = ["default-fancy"] }
