[package]
name = "yew-material"
version = "0.1.0"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2"
yew = { git = "https://github.com/yewstack/yew/", branch = "master" }
js-sys = "0.3"
paste = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "ValidityState",
    "CustomEvent",
    "Node",
    "Element",
    "HtmlElement"
]

[features]
button = []
circular-progress = []
checkbox = []
circular-progress-four-color = []
drawer = []
top-app-bar = []
icon-button = []
fab = []
formfield = []
linear-progress = []
icon = []
radio = []
switch = []
top-app-bar-fixed = []
dialog = []
list = []
icon-button-toggle = []
slider = []
tabs = []
snackbar = []
textfield = []
textarea = []
select = []
menu = []
full = [
    "button",
    "circular-progress",
    "checkbox",
    "circular-progress-four-color",
    "drawer",
    "top-app-bar",
    "icon-button",
    "fab",
    "formfield",
    "linear-progress",
    "icon",
    "radio",
    "switch",
    "top-app-bar-fixed",
    "dialog",
    "list",
    "icon-button-toggle",
    "slider",
    "tabs",
    "snackbar",
    "textfield",
    "textarea",
    "select",
    "menu",
]
default = []
