[package]
name = "yew-material"
version = "0.1.0"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/hamza1311/yew-material"
homepage = "https://yew-material.web.app/"
keywords = ["material-design", "yew", "yew-material", "wrapper", "wasm"]
categories = ["web-programming", "wasm", "api-bindings", "gui"]
include = ["src/**/*", "Cargo.toml", "build"]
license = "Apache-2.0"
description = "Yew wrapper for Material Web Components"

[dependencies]
wasm-bindgen = "0.2"
yew = "0.18"
js-sys = "0.3"
paste = "1.0"
gloo = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "ValidityState",
    "CustomEvent",
    "Node",
    "Element",
    "HtmlElement"
]

[features]
button = []
circular-progress = []
checkbox = []
circular-progress-four-color = []
drawer = []
top-app-bar = []
icon-button = []
fab = []
formfield = []
linear-progress = []
icon = []
radio = []
switch = []
top-app-bar-fixed = []
dialog = []
list = []
icon-button-toggle = []
slider = []
tabs = []
snackbar = []
textfield = []
textarea = []
select = []
menu = []
full = [
    "button",
    "circular-progress",
    "checkbox",
    "circular-progress-four-color",
    "drawer",
    "top-app-bar",
    "icon-button",
    "fab",
    "formfield",
    "linear-progress",
    "icon",
    "radio",
    "switch",
    "top-app-bar-fixed",
    "dialog",
    "list",
    "icon-button-toggle",
    "slider",
    "tabs",
    "snackbar",
    "textfield",
    "textarea",
    "select",
    "menu",
]
default = []
